syntax = "proto3";

package api;

option go_package = "prometheus-manager/api;api";
option java_multiple_files = true;
option java_package = "api";

// 验证码类型枚举
enum CaptchaType {
  CaptchaTypeUnknown = 0;
  // audio captcha 音频形式的验证码
  CaptchaTypeAudio = 1;
  // string captcha 字符串形式的验证码
  CaptchaTypeString = 2;
  // math captcha 数学公式形式的验证码
  CaptchaTypeMath = 3;
  // chinese captcha 中文形式的验证码
  CaptchaTypeChinese = 4;
  // digit captcha 数字形式的验证码
  CaptchaTypeDigit = 5;
}

// 系统用户信息
message UserV1 {
  // 用户ID
  uint32 id = 1;
  // 用户名
  string username = 2;
  // 密码
  //	string password = 3;
  // 邮箱
  string email = 4;
  // 手机号
  string phone = 5;
  // 用户状态
  int32 status = 6;
  // 备注
  string remark = 7;
  // 头像
  string avatar = 8;
  // 创建时间, unix时间戳
  int64 createdAt = 9;
  // 更新时间, unix时间戳
  int64 updatedAt = 10;
  // 删除时间, unix时间戳
  int64 deletedAt = 11;
  // 角色列表
  repeated RoleSelectV1 roles = 12;
  // 昵称
  string nickname = 13;
  // 性别
  int32 gender = 14;
}

// 系统用户下拉信息
message UserSelectV1 {
  // 用户值, 对应用户的id
  uint32 value = 1;
  // 用户标签, 对应用户的username
  string label = 2;
  // 用户状态
  int32 status = 3;
  // 备注
//  string remark = 4;
  // 头像
  string avatar = 5;
  // 昵称
  string nickname = 6;
  // 性别
  int32 gender = 7;
}

// 系统角色信息
message RoleV1 {
  // 角色ID
  uint32 id = 1;
  // 角色名称
  string name = 2;
  // 角色状态
  int32 status = 3;
  // 备注
  string remark = 4;
  // 创建时间, unix时间戳
  int64 createdAt = 5;
  // 更新时间, unix时间戳
  int64 updatedAt = 6;
  // 删除时间, unix时间戳
  int64 deletedAt = 7;
  // 用户列表
  repeated UserSelectV1 users = 8;
}

// 系统角色下拉信息
message RoleSelectV1 {
  // 角色值, 对应角色的id
  uint32 value = 1;
  // 角色标签, 对应角色的name
  string label = 2;
  // 角色状态
  int32 status = 3;
  // 备注
  string remark = 4;
}

// 系统接口信息
message ApiV1 {
  // 接口ID
  uint32 id = 1;
  // 接口名称
  string name = 2;
  // 接口路径
  string path = 3;
  // 接口请求方法
  string method = 4;
  // 接口状态
  int32 status = 5;
  // 备注
  string remark = 6;
  // 创建时间, unix时间戳
  int64 createdAt = 7;
  // 更新时间, unix时间戳
  int64 updatedAt = 8;
  // 删除时间, unix时间戳
  int64 deletedAt = 9;
}

// 系统接口下拉信息
message ApiSelectV1 {
  // 接口值, 对应接口的id
  uint32 value = 1;
  // 接口标签, 对应接口的name
  string label = 2;
  // 接口状态
  int32 status = 3;
  // 备注
  string remark = 4;
}